k8s-manifest/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: drxp
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: backend
  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: drxp-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
            
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5

          resources:
            requests:
              cpu: 125m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
