k8s-manifest/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: drxp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: drxp-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
