k8s-manifest/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mongo
  namespace: drxp

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongo

  template:
    metadata:
      labels:
        app: mongo

    spec:
      containers:
        - name: mongo
          image: mongo:7.0

          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db

      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc
