k8s-manifest/mongodb-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mongodb-service
  namespace: drxp

spec:
  selector:
    app: mongo

  ports:
    - port: 27017
      targetPort: 27017

  type: ClusterIP
