k8s-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: drxp-ingress
  namespace: drxp

spec:
  rules:
    - http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
